Fixed z-index problem, rebuilded nav system in the top

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -80,23 +80,30 @@
         
         .top
             position: relative
+            z-index: 10
             
         .nav
             @include menuTransition
-                
+            
+            display: block
             visibility: hidden
             min-width: 200px
+            text-align: right
             position: absolute
             right: 0
-            text-align: right
+            overflow-y: auto
             border-radius: 5px
             opacity: 0
             max-height: 40px
             
+            &.show
+                visibility: visible
+                max-height: 350px
+                opacity: 0.95
+                
             li 
                 display: block
                 padding: 0
-                
                 a
                     display: block
                     padding: 0
@@ -119,17 +126,19 @@
                     background: url("../img/icons/arrow-down-dark.png")
             
             .submenu
-                right: 200px
+                position: static
                 width: 200px
-                margin-top: -41px
+                right: 0
+                max-height: 0
+                margin-top: 0
                 padding: 5px 0
                 padding-bottom: 0
-                
-                
-            &.show
-                visibility: visible
-                opacity: 0.95
-                max-height: 1000px
+                box-shadow: none
+                border-top: 1px solid #000
+                border-bottom: 1px solid #000
+                background: rgba(51, 151, 226, 0.95)
+                li a
+                    margin-right: 10px
         
         .main
             padding-right: 20px
@@ -137,13 +146,14 @@
                 font-size: 28px
             .btn
                 padding: 15px 25px
+    
     .tours
         .slide
             margin: 0 29px
             max-width: 335px
             .price
                 line-height: 1.2
-                
+    
     .advantages
         .content
             display: block
@@ -163,20 +173,24 @@
     .offer
         h2
             text-align: center
+            
         .form
             display: grid
             grid-gap: 25px
             grid-template-columns: 1fr 1fr
+            
         .custom-select
             margin: 0
+            
         select, input
             margin: 0
             width: 100%
+            
         .btn
             justify-self: center
             grid-column-start: 1
             grid-column-end: 3
-            
+    
     footer
         .content
             grid-gap: 50px
@@ -193,9 +207,6 @@
                 margin-right: 10px
                 &:last-child
                     margin-right: 0
-        
-        
-
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
