--- a/sass/header.sass
+++ b/sass/header.sass
@@ -147,7 +147,10 @@ header
         position: relative
         border-radius: 10px
         font-size: 0
-        z-index: 5
+        max-width: 800px
+        flex-wrap: wrap
+        justify-content: center
+        align-items: center
         
         li
             display: inline-block
@@ -215,7 +218,6 @@ header
         flex-direction: column
         justify-content: space-around
         background-color: rgba(1, 74, 129, 0.49)
-        z-index: 2
         h1
             color: #fff
             margin: 0
