--- a/sass/main.sass
+++ b/sass/main.sass
@@ -191,10 +191,14 @@ main
             
     p
         position: relative
+        max-height: 192px
         max-width: 540px
-        margin-right: 50px
+        padding-right: 50px
         margin-left: 20px
         line-height: 1.5
+        overflow-y: scroll
+        overflow-x: hidden
+        
         &::before
             content: ''
             display: block
@@ -206,6 +210,7 @@ main
             top: 0
         
         &::after
+        
             content: ''
             display: block
             position: absolute
